# go2_navigation

./: .gitignore  CLAUDE.md  CMakeLists.txt  DOCUMENTATIE.md  __init__.py  config.py  requirements.txt  sdk2_high_level.py  sdk2_interface.py  sdk2_navigator.py  setup.py  setup_on_robot.sh  slam_exploration.sh
src/: CMakeLists.txt  damping_mode.cpp  slam_exploration.cpp  slam_exploration_full.cpp
